# scrobblify

./: .env.dist  .gitignore  Cargo.toml  Makefile.toml  README.md  askama.toml
app/: Cargo.toml
application/: Cargo.toml
assets/: build.js  package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js
bridge/: Cargo.toml
bridge/src/spotify/: client.rs  mod.rs  shims.rs
core/: Cargo.toml
core/src/: app.rs  scrobbler.rs
db/: Cargo.toml
db/src/: lib.rs  repository.rs  shims.rs
db/src/entities/: artists_tracks.rs  prelude.rs  scrobbles.rs  tags.rs  tracks.rs
db/src/migrator/: m20221022_000001_create_tracks_table.rs  m20221022_000002_create_scrobbles_table.rs  m20221022_000003_create_artists_table.rs  m20221022_000004_create_artists_tracks_table.rs  m20221027_000003_create_albums_tracks_table.rs  mod.rs
db/src/queries/: list_scrobbles_by_artist_query.sql  stats_for_popular_artists.sql  stats_for_popular_tags.sql  stats_for_popular_tracks.sql
domain/: Cargo.toml
domain/src/: app.rs  errors.rs  lib.rs  models.rs
domain/src/bridge/: spotify.rs
domain/src/db/: repository.rs
src/: lib.rs  main.rs  utils.rs
src/app/: app.rs  mod.rs  scrobbler.rs
src/app/spotify/: client.rs  mod.rs  shims.rs
src/bridge/spotify/: client.rs  shims.rs
src/core/: app.rs  mod.rs  scrobbler.rs
src/core/lastfm/: client.rs
src/core/spotify/: shims.rs
src/db/: mod.rs  repository.rs  shims.rs
src/db/entities/: albums.rs  albums_artists.rs  albums_tracks.rs  artists.rs  artists_tracks.rs  mod.rs  prelude.rs  scrobbles.rs  tags.rs  tags_tracks.rs  tracks.rs
src/db/migrator/: m20221022_000001_create_tracks_table.rs  m20221022_000002_create_scrobbles_table.rs  m20221022_000003_create_artists_table.rs  m20221022_000004_create_artists_tracks_table.rs  m20221027_000001_create_albums_table.rs  m20221027_000002_create_albums_artists_tracks_table.rs  m20221027_000003_create_albums_tracks_table.rs  m20221101_000001_create_tags_table.rs  m20221101_000002_create_tags_tracks_table.rs  mod.rs
src/db/queries/: get_last_scrobble_query.sql  list_scrobbles_by_artist_query.sql  list_scrobbles_by_date_range_query.sql  list_scrobbles_by_tag_query.sql  stats_for_popular_artists.sql  stats_for_popular_tags.sql  stats_for_popular_tracks.sql
src/domain/: app.rs  errors.rs  mod.rs  models.rs  repository.rs
src/domain/bridge/: spotify.rs
src/domain/db/: mod.rs  repository.rs
src/web/: http.rs  http_ui.rs  mod.rs  spotify.rs
src/web/spotify/: client.rs  shims.rs
src/web/templates/: authorize.html  index.html
templates/: error.html  index.html
web/: Cargo.toml
web/src/: http_ui.rs  lib.rs
web/templates/: index.html
