[package]
name = "scrobblify"
description = "Personal, self-hosted Spotify auto-scrobbler or Last.fm compatible API."
repository = "https://github.com/andreapavoni/scrobblify"
keywords = ["spotify", "lastfm", "scrobbler", "gnufm", "librefm"]
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[[bin]]
name = "scrobblify"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
# web framework
graphul = { version = "0.3" }
# html templates
askama = "0.11"
# spotify API
rspotify = { version = "0.11", features = [
  "__async",
  "client-reqwest",
  "reqwest-native-tls",
] }
# database
sea-orm = { version = "^0.9.0", features = [
  "macros",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
], default-features = false }
sea-orm-migration = { version = "^0.9.0", features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
] }
sea-query = { version = "0.27", features = [
  "thread-safe",
  "backend-sqlite",
  "with-chrono",
] }
# Errors
thiserror = "1.0"
# Results
anyhow = "1.0"
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1"
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
