[package]
name = "scrobblify"
description = "Personal, self-hosted Spotify auto-scrobbler or Last.fm compatible API."
repository = "https://github.com/andreapavoni/scrobblify"
keywords = ["spotify", "lastfm", "scrobbler", "gnufm", "librefm"]
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["domain", "core", "db", "bridge", "web"]

[profile.release]
panic = "abort"

[[bin]]
name = "scrobblify"
path = "src/main.rs"

[dependencies]
scrobblify-core = { path = "core" }
scrobblify-db = { path = "db" }
scrobblify-web = { path = "web" }
scrobblify-bridge = { path = "bridge" }

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }                   # Logging & tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
