[package]
name = "scrobblify-app"
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }

scrobblify-db = { package = "scrobblify-db", path = "../db" }
scrobblify-domain = { package = "scrobblify-domain", path = "../domain" }
scrobblify-web = { package = "scrobblify-web", path = "../web" }
