[package]
name = "brainz-fm-application"
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brainz_fm"
path = "src/main.rs"

[dependencies]
db = { package = "brainz-fm-db", path = "../db" }
domain = { package = "brainz-fm-domain", path = "../domain" }
web = { package = "brainz-fm-web", path = "../web" }
