[package]
name = "scrobblify-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrobblify-domain = { path = "../domain" }
rspotify = { version = "0.11", features = [
  "__async",
  "client-reqwest",
  "reqwest-native-tls",
] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
