[package]
name = "scrobblify-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scrobblify_core"
path = "src/lib.rs"

[dependencies]
scrobblify-domain = { path = "../domain" }
scrobblify-db = { path = "../db" }
scrobblify-bridge = { path = "../bridge" }

async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }                   # Logging & tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
