[package]
name = "scrobblify-db"
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
edition = "2021"
rust-version = "1.63"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.sea-orm]
version = "^0.9.0"
features = ["macros", "runtime-tokio-native-tls", "sqlx-sqlite"]
default-features = false

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = ["runtime-tokio-native-tls", "sqlx-sqlite"]
