[package]
name = "scrobblify-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrobblify-domain = { path = "../domain" }

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

axum = { version = "0.6.0-rc.2", features = ["ws", "headers", "json"] }
axum-extra = { version = "0.4.0-rc.1", features = ["spa"] }
tower-http = { version = "0.3.0", features = ["trace", "set-header"] }
askama = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
